@@ -1402,13 +1402,12 @@
         <jdk>12</jdk>
       </activation>
       <properties>
-        <testAdditionalRuntimeArgLine>--illegal-access=permit --add-exports
-					java.base/sun.nio.ch=ALL-UNNAMED --add-exports
-					java.base/jdk.internal.ref=ALL-UNNAMED --add-opens java.base/java.lang=org.drools.core --add-opens java.base/java.lang=spring.core,javassist --add-opens java.base/java.lang.reflect=spring.core,javassist
-					--add-opens java.base/java.util=ALL-UNNAMED --add-opens
-					java.base/java.lang=ALL-UNNAMED --add-reads com.hack23.cia.web=vaadin.spring,spring.core,javassist --add-reads vaadin.spring=spring.core,javassist --add-opens
-					java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.util=com.hack23.cia.web
-					--add-opens vaadin.spring/com.vaadin.spring.annotation=spring.core,javassist --add-opens vaadin.spring/com.vaadin.spring.internal=spring.core,javassist --add-opens com.hack23.cia.service.impl/com.hack23.cia.service.impl.rules=ALL-UNNAMED</testAdditionalRuntimeArgLine>
+        <testAdditionalRuntimeArgLine>--illegal-access=permit --add-exports	java.base/sun.nio.ch=ALL-UNNAMED 
+        			--add-exports java.base/jdk.internal.ref=ALL-UNNAMED 
+        			--add-opens java.base/java.lang=ALL-UNNAMED,org.drools.core,spring.core,javassist 
+        			--add-opens java.base/java.lang.reflect=ALL-UNNAMED,spring.core,javassist
+					--add-opens java.base/java.util=ALL-UNNAMED,com.hack23.cia.web,spring.core,javassist 
+					--add-opens com.hack23.cia.service.impl/com.hack23.cia.service.impl.rules=ALL-UNNAMED</testAdditionalRuntimeArgLine>
         <test.jvm.path>/usr/lib/jvm/jdk-12/bin/java</test.jvm.path>
         <jdk.src.version>1.8</jdk.src.version>
         <jdk.target.version>1.8</jdk.target.version>
@@ -1424,13 +1423,12 @@
         <jdk>11</jdk>
       </activation>
       <properties>
-        <testAdditionalRuntimeArgLine>--illegal-access=permit --add-exports
-					java.base/sun.nio.ch=ALL-UNNAMED --add-exports
-					java.base/jdk.internal.ref=ALL-UNNAMED --add-opens java.base/java.lang=org.drools.core --add-opens java.base/java.lang=spring.core,javassist --add-opens java.base/java.lang.reflect=spring.core,javassist
-					--add-opens java.base/java.util=ALL-UNNAMED --add-opens
-					java.base/java.lang=ALL-UNNAMED  --add-reads com.hack23.cia.web=vaadin.spring,spring.core,javassist --add-reads vaadin.spring=spring.core,javassist --add-opens
-					java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.util=com.hack23.cia.web
-				    --add-opens vaadin.spring/com.vaadin.spring.annotation=spring.core,javassist --add-opens vaadin.spring/com.vaadin.spring.internal=spring.core,javassist --add-opens com.hack23.cia.service.impl/com.hack23.cia.service.impl.rules=ALL-UNNAMED</testAdditionalRuntimeArgLine>
+        <testAdditionalRuntimeArgLine>--illegal-access=permit --add-exports	java.base/sun.nio.ch=ALL-UNNAMED 
+        			--add-exports java.base/jdk.internal.ref=ALL-UNNAMED 
+        			--add-opens java.base/java.lang=ALL-UNNAMED,org.drools.core,spring.core,javassist 
+        			--add-opens java.base/java.lang.reflect=ALL-UNNAMED,spring.core,javassist
+					--add-opens java.base/java.util=ALL-UNNAMED,com.hack23.cia.web,spring.core,javassist 
+					--add-opens com.hack23.cia.service.impl/com.hack23.cia.service.impl.rules=ALL-UNNAMED</testAdditionalRuntimeArgLine>
         <test.jvm.path>/usr/lib/jvm/java-11-openjdk-amd64/bin/java</test.jvm.path>
         <jdk.src.version>1.8</jdk.src.version>
         <jdk.target.version>1.8</jdk.target.version>
